# snakecase

./: Cargo.toml  README.md
benches/: bench.rs
src/: ascii.rs  lib.rs  unicode.rs
