[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
name = "snakecase"
version = "0.2.0"
description = "Snakecase is a general purpose snakecase implementation supporting both ascii and unicode."
repository = "https://github.com/rust-playground/snakecase"
readme = "README.md"
keywords = ["snakecase"]

[[bench]]
harness = false
name = "bench"

[dependencies]

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[lib]
bench = false
